Fix a bug with table districts overflow

--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,7 @@ a {
   padding: 0;
 }
 .statewise-cases tbody tr.fold .districts-table {
-  max-height: 1000px;
+  max-height: 1500px;
   transition: all 0.4s ease;
 }
 .statewise-cases tbody tr.fold.close .districts-table {
